<resources>
    <string name="app_name">Tarot_TechToServe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pamela</string>
    <string name="nav_header_subtitle">pamela@techtoserve.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_colecciones">Colecciones</string>
    <string name="menu_temas">Temas</string>
    <string name="menu_experimentos">Experimentos</string>
    <string name="menu_descargas">Descargas</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="menu_comentarios">Envía Comentarios</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="title_activity_tarot_marsella">Tarot de Marsella</string>
    <string name="title_activity_tarot_game">Tarot Diario</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loremp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries\"</string>
    <string name="msg_ti1">Tirada a un carta</string>
    <string name="msg_ti2">Tirada Clásica</string>
    <string name="msg_ti3">El camino</string>
    <string name="tv_message_card">Arrastra \nAqui</string>
    <string name="ver_lectura">Ver Lectura</string>
    <string name="eliga_carta">Eliga su carta</string>
    <string name="menu_share">Share</string>
</resources>