<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="8dp"

        tools:ignore="UselessParent">


        <ImageView

            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/carta"

            android:contentDescription="@string/app_name" />

        <LinearLayout
            style="@style/StyleLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/StyleTitle"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/msg_ti1" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loremp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="8dp"

        tools:ignore="UselessParent">


        <ImageView

            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/carta"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            style="@style/StyleLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/StyleTitle"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/msg_ti2" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loremp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:background="@color/start"
        android:id="@+id/ll_elcamino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="8dp"

        tools:ignore="UselessParent">


        <ImageView

            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/carta"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            style="@style/StyleLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/StyleTitle"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/msg_ti3" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loremp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>