<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tarot_marsella.TarotMarsella">

    <com.google.android.material.appbar.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            app:navigationIcon="@drawable/ic_keyboard_backspace"

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView

        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:padding="8dp"

                tools:ignore="UselessParent">


                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/carta"

                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    style="@style/StyleLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/StyleTitle"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/msg_ti1" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/loremp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:padding="8dp"

                tools:ignore="UselessParent">


                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/carta"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    style="@style/StyleLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/StyleTitle"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/msg_ti2" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/loremp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:background="@color/start"
                android:id="@+id/ll_elcamino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:padding="8dp"

                tools:ignore="UselessParent">


                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/carta"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    style="@style/StyleLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/StyleTitle"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/msg_ti3" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/loremp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>